--- a/app/src/main/res/layout/fragment_research_topic.xml
+++ b/app/src/main/res/layout/fragment_research_topic.xml
@@ -16,15 +16,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            style="?textAppearanceHeadline1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DEMO"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:layout_constraintTop_toTopOf="parent"
+            tools:background="#cad" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
