--- a/app/src/main/res/layout/list_item_research_topic.xml
+++ b/app/src/main/res/layout/list_item_research_topic.xml
@@ -54,9 +54,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/view_spacing_small"
                 android:text="@{data.title}"
+                app:layout_constraintBottom_toTopOf="@+id/external_link"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
                 app:layout_constraintTop_toBottomOf="@+id/topic_title"
+                app:layout_goneMarginBottom="@dimen/view_spacing_large"
                 tools:text="This is the description of the topic to give better idea" />
 
             <com.google.android.material.button.MaterialButton
@@ -67,9 +69,12 @@
                 android:layout_marginTop="@dimen/view_spacing_medium"
                 android:layout_marginBottom="@dimen/list_item_vertical_margin"
                 android:text="Visit Resource"
+                app:icon="@drawable/ic_outline_open_in_new"
+                app:iconGravity="textEnd"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                 app:layout_constraintTop_toBottomOf="@+id/topic_subtitle"
+                app:visibleOrGone="@{data.url != null}"
                 tools:visibility="visible" />
 
 
