--- a/app/src/main/res/layout/list_item_research_topic.xml
+++ b/app/src/main/res/layout/list_item_research_topic.xml
@@ -26,14 +26,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_begin="@dimen/view_spacing_large" />
+                app:layout_constraintGuide_begin="@dimen/view_spacing_larger" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline_end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_end="@dimen/view_spacing_large" />
+                app:layout_constraintGuide_end="@dimen/view_spacing_larger" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/topic_title"
@@ -49,11 +49,11 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/topic_subtitle"
-                style="?textAppearanceSubtitle2"
+                style="?textAppearanceBody1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/view_spacing_small"
-                android:text="@{data.title}"
+                android:text="@{data.description}"
                 app:layout_constraintBottom_toTopOf="@+id/external_link"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
@@ -68,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/view_spacing_medium"
                 android:layout_marginBottom="@dimen/list_item_vertical_margin"
-                android:text="Visit Resource"
+                android:text="Related Resource"
                 app:icon="@drawable/ic_outline_open_in_new"
                 app:iconGravity="textEnd"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -77,7 +77,7 @@
                 app:visibleOrGone="@{data.url != null}"
                 tools:visibility="visible" />
 
-
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </com.google.android.material.card.MaterialCardView>
 </layout>
