--- a/app/src/main/res/layout/list_item_common_user_contact_with_binding.xml
+++ b/app/src/main/res/layout/list_item_common_user_contact_with_binding.xml
@@ -1,6 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+
+        <variable
+            name="data"
+            type="dev.hossain.android.research.data.model.Person" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/view_spacing_medium"
+        android:foreground="?android:attr/selectableItemBackground"
+        tools:ignore="UnusedAttribute">
+
+        <TextView
+            android:id="@+id/person_thumb"
+            style="?textAppearanceHeadline3"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@drawable/circle"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="@{data.nameLetter}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="B" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/name"
+            style="?textAppearanceHeadline6"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/view_spacing_larger"
+            android:text="@{data.name}"
+            app:layout_constraintBottom_toTopOf="@id/phone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/person_thumb"
+            app:layout_constraintTop_toTopOf="@+id/person_thumb"
+            tools:text="Person Name" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/phone"
+            style="?textAppearanceBody1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/view_spacing_small"
+            android:text="@{data.phone}"
+            app:layout_constraintBottom_toTopOf="@id/company"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/name"
+            app:layout_constraintTop_toBottomOf="@+id/name"
+            tools:text="(123) 456-7890" />
+
+        <TextView
+            android:id="@+id/company"
+            style="?textAppearanceBody1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@{data.company}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/name"
+            app:layout_constraintTop_toBottomOf="@+id/phone"
+            tools:text="Suger Corp." />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
