--- a/app/src/main/res/layout/list_item_common_user_contact_with_binding.xml
+++ b/app/src/main/res/layout/list_item_common_user_contact_with_binding.xml
@@ -28,6 +28,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            tools:background="@tools:sample/avatars"
             tools:text="B" />
 
         <com.google.android.material.textview.MaterialTextView
@@ -41,7 +42,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/person_thumb"
             app:layout_constraintTop_toTopOf="@+id/person_thumb"
-            tools:text="Person Name" />
+            tools:text="@tools:sample/full_names" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/phone"
@@ -54,7 +55,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/name"
             app:layout_constraintTop_toBottomOf="@+id/name"
-            tools:text="(123) 456-7890" />
+            tools:text="@tools:sample/us_phones" />
 
         <TextView
             android:id="@+id/company"
@@ -66,6 +67,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/name"
             app:layout_constraintTop_toBottomOf="@+id/phone"
-            tools:text="Suger Corp." />
+            tools:text="@tools:sample/cities" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
