[UPDATE] Theme to be bit lighter shade
Fixed the circle color for dark and light mode.

--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -4,9 +4,9 @@
     android:shape="ring"
     android:thicknessRatio="2"
     android:useLevel="false">
-    <solid android:color="@color/primaryLightColor" />
+    <solid android:color="?attr/colorButtonNormal" />
 
     <stroke
         android:width="2dp"
-        android:color="@color/primaryDarkColor" />
+        android:color="?attr/colorControlNormal" />
 </shape>
