[ADDED] Downloadable fonts and emoji! Why not? 😁
😀 😃 😄 😁 😆

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,5 +43,13 @@
             app:navGraph="@navigation/app_nav_graph"
             tools:background="#cfc"
             tools:ignore="FragmentTagUsage" />
+
+        <androidx.emoji.widget.EmojiTextView
+            android:id="@+id/emoji_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="?textAppearanceHeadline3"
+            android:layout_gravity="center|bottom"
+            android:text="This is a text"/>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
