--- a/app/src/main/res/layout/list_item_research_topic.xml
+++ b/app/src/main/res/layout/list_item_research_topic.xml
@@ -41,6 +41,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/list_item_vertical_margin"
+                android:fontFamily="@font/noto_sans"
                 android:text="@{data.title}"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
