--- a/app/src/main/res/layout/list_item_research_topic.xml
+++ b/app/src/main/res/layout/list_item_research_topic.xml
@@ -54,6 +54,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/view_spacing_small"
+                android:fontFamily="@font/noto_sans"
                 android:text="@{data.description}"
                 app:layout_constraintBottom_toTopOf="@+id/external_link"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
