--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -59,6 +59,9 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <argument
+            android:name="selectedTopic"
+            app:argType="dev.hossain.android.research.data.model.ResearchTopic" />
     </fragment>
     <fragment
         android:id="@+id/showSourceCodeFragment"
@@ -82,5 +85,8 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <argument
+            android:name="selectedTopic"
+            app:argType="dev.hossain.android.research.data.model.ResearchTopic" />
     </fragment>
 </navigation>
