[ADDED] Additional properties to show source code from GitHub repository.

--- a/app/src/main/res/layout/list_item_research_topic.xml
+++ b/app/src/main/res/layout/list_item_research_topic.xml
@@ -76,7 +76,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                 app:layout_constraintTop_toBottomOf="@+id/topic_subtitle"
-                app:visibleOrGone="@{data.url != null}"
+                app:visibleOrGone="@{data.externalUrl != null}"
                 tools:visibility="visible" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
