[MINOR] Renamed package to reflect more about research topic.

--- a/app/src/main/res/layout/fragment_research_topic.xml
+++ b/app/src/main/res/layout/fragment_research_topic.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="vm"
-            type="dev.hossain.android.research.topic.TopicViewModel" />
+            type="dev.hossain.android.research.researchtopic.TopicViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
