--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -49,7 +49,7 @@
     </fragment>
     <fragment
         android:id="@+id/dataBindingAssistedFragment"
-        android:name="dev.hossain.android.research.samples.databinding.DataBindingAssistedFragment"
+        android:name="dev.hossain.android.research.experiments.databinding.DataBindingAssistedFragment"
         android:label="@string/title_research_type_data_binding_assisted_recycler_view_example"
         tools:layout="@layout/research_data_binding_assisted_example_fragment">
         <action
@@ -75,7 +75,7 @@
     </fragment>
     <fragment
         android:id="@+id/nonDataBindingFragment"
-        android:name="dev.hossain.android.research.samples.listenerinterface.NonDataBindingFragment"
+        android:name="dev.hossain.android.research.experiments.listenerinterface.NonDataBindingFragment"
         android:label="@string/title_research_type_non_data_binding_listener_callback_recycler_view_example"
         tools:layout="@layout/common_full_screen_recycler_view">
         <action
